--- a/style.css
+++ b/style.css
@@ -34,17 +34,17 @@ body{
     color: hsl(0, 0%, 100%, 60%);
     padding: 1.25rem;
 }
-.container{
+.main-container{
     padding: 1.25rem;
     background-color: var(--card-bg);
     border-radius: 0.5rem;
     margin-bottom: 1rem;
 }
-.container .main-image{
+.main-container .main-image{
     position: relative;
 
 }
-.container .main-image div{
+.main-container .main-image div{
     position: absolute;
     top: 0;
     background-color: hsl(178, 100%, 50%, 60%);
@@ -54,54 +54,55 @@ body{
     opacity: 0;
     transition: opacity 0.8s ease-in-out;
 }
-.container .main-image div:hover{
+.main-container .main-image div:hover{
     opacity: 1;
+    cursor: pointer
 }
-.container .main-image div img{
+.main-container .main-image div img{
 position: absolute;
 left: 50%;
 top: 50%;
 transform: translate(-50%, -50%);
 }
-.container h2{
+.main-container h2{
     color: var(--white);
     margin: 1rem 0.5rem 0.5rem 0;
 }
-.container h2:hover{
+.main-container h2:hover{
     color: var(--cyan);
     cursor: pointer;
 }
-.container ul{
+.main-container ul{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 2rem 0;
     border-bottom: 1px solid var(--line)
 }
-.container ul li{
+.main-container ul li{
     display: flex;
     align-items: center;
 }
-.container ul li:first-child{
+.main-container ul li:first-child{
     color: var(--cyan);
 }
-.container .avatar{
+.main-container .avatar{
     display: flex;
     align-items: center;
     justify-content: start;
     padding-top: 2rem;
 }
-.container .avatar img{
+.main-container .avatar img{
     width: 3.5rem;
     border: 2px solid var(--white);
     border-radius: 50%;
     margin-right: 1rem;
 }
-.container .avatar p span{
+.main-container .avatar p span{
     color: var(--white);
     font-weight: 400;
 }
-.container .avatar p span:hover{
+.main-container .avatar p span:hover{
     color: var(--cyan);
     cursor: pointer;
 }
@@ -115,7 +116,7 @@ transform: translate(-50%, -50%);
 }
 
 @media(min-width: 500px){
-    .container{
+    .main-container{
         width: 450px;
         margin: auto;
         margin: 0 auto 1rem'
